syntax = "proto3";

package rl;

import "common.proto";

service EnvironmentService {
    rpc Initialize(rl.ExperimentConfig) returns (rl.Status);
    rpc StartRollout(rl.ExperimentConfig) returns (rl.Status);
    rpc StopRollout(rl.ExperimentConfig) returns (rl.Status);
}